[gd_scene load_steps=9 format=3 uid="uid://ccl77hha71kd5"]

[ext_resource type="Texture2D" uid="uid://bb74mmf3rdg4r" path="res://art/objects/Chest_01_Locked.png" id="1_or81j"]
[ext_resource type="Script" uid="uid://cqwhg8bg7ctjy" path="res://interactables/chest/chest.gd" id="1_pmapc"]
[ext_resource type="PackedScene" uid="uid://57pxqq46jhte" path="res://interactables/key_door/key.tscn" id="2_1cndp"]
[ext_resource type="Texture2D" uid="uid://ctvthkqtgqmgm" path="res://art/objects/Chest_01_Unlocked.png" id="2_2bxje"]
[ext_resource type="PackedScene" uid="uid://4je51vb3422o" path="res://interactables/interactable.tscn" id="4_rh8pd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1cndp"]
radius = 40.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2bxje"]
size = Vector2(50, 40)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_2bxje"]
properties/0/path = NodePath(".:is_locked")
properties/0/spawn = true
properties/0/replication_mode = 2

[node name="Chest" type="Node2D"]
script = ExtResource("1_pmapc")
key_scene = ExtResource("2_1cndp")

[node name="ChestLocked" type="Sprite2D" parent="."]
position = Vector2(0, -29)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_or81j")

[node name="ChestUnlocked" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -29)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_2bxje")

[node name="Interactable" parent="." instance=ExtResource("4_rh8pd")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactable"]
position = Vector2(0, -20)
shape = SubResource("CircleShape2D_1cndp")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-3, -21)
shape = SubResource("RectangleShape2D_2bxje")

[node name="KeySpawnLocation" type="Marker2D" parent="."]
position = Vector2(0, -32)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_2bxje")

[node name="KeySpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://57pxqq46jhte")
spawn_path = NodePath("../KeySpawnLocation")
spawn_limit = 1

[connection signal="interacted" from="Interactable" to="." method="_on_interactable_interacted"]
[connection signal="delta_synchronized" from="MultiplayerSynchronizer" to="." method="_on_multiplayer_synchronizer_delta_synchronized"]
